@@ -11,5 +11,7 @@
         void UpdateSlot(string name, object value);
 
         string TypeName { get; }
+
+        IObject Self { get; }
     }
 }
